# go-echo-mongo/main.go
@@ -2,7 +2,7 @@ package main
 
 import (
 	"github.com/labstack/echo"
-	"github.com/swaggo/echo-swagger"
+	echoSwagger "github.com/swaggo/echo-swagger"
 	"go-echo-mongo/api/handler"
 	_ "go-echo-mongo/docs"
 	"go-echo-mongo/mware"
@@ -11,15 +11,31 @@ import (
 )
 
 func main() {
+
+
+	// @title Swagger Example API
+	// @version 1.0
+	// @description This is a sample server user server.
+	// @termsOfService http://swagger.io/terms/
+
+	// @contact.name API Support
+	// @contact.url http://www.swagger.io/support
+	// @contact.email support@swagger.io
+
+	// @license.name Apache 2.0
+	// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+	// @host localhost:8080
+	// @BasePath /v1
+
 	e := echo.New()
 	mware.Mainmiddleware(e)
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+
 	db, err := mgo.Dial("mongodb://localhost:27017")
 	if err != nil {
 		e.Logger.Fatal(err)
 	}
 
-	// Create indices
 	if err = db.Copy().DB("demo").C("user").EnsureIndex(mgo.Index{
 		Key:    []string{"email"},
 		Unique: true,
@@ -27,19 +43,25 @@ func main() {
 		log.Fatal(err)
 	}
 
-	// Initialize handler
+
 	h := &handler.Handler{DB: db}
 
-
-	e.GET("/getuserbyid/:id", handler.GetUserByID(h))
-	e.POST("/createuser", handler.CreateUser(h))
-	e.PUT("/updateuser/:id", handler.UpdateUser(h))
-	e.DELETE("/deleteuser/:id", handler.DeleteUser(h))
-	e.POST("/signin",handler.SignIn(h))
-	e.GET("/getusers",handler.GetUsers(h))
+	g := e.Group("/v1")
+	user := g.Group("/user")
+	user.GET("/getuserbyid/:id", handler.GetUserByID(h))
+	user.POST("/createuser", handler.CreateUser(h))
+	user.PUT("/updateuser/:id", handler.UpdateUser(h))
+	user.DELETE("/deleteuser/:id", handler.DeleteUser(h))
+	user.POST("/signin",handler.SignIn(h))
+	user.GET("/getusers",handler.GetUsers(h))
 	e.GET("/private", handler.Private, mware.IsLoggedIn)
 	e.GET("/admin", handler.Private, mware.IsLoggedIn,mware.IsAdmin)
 
-	e.Logger.Fatal(e.Start(":8000"))
+	e.GET("/swagger/*any", echoSwagger.WrapHandler)
+
+	//url := echoSwagger.URL("http://localhost:8080/swagger/doc.json") //The url pointing to API definition
+	//e.GET("/swagger/*", echoSwagger.EchoWrapHandler(url))
+
+	e.Logger.Fatal(e.Start(":8080"))
 
 }
